syntax = "proto3";

package go.micro.service.coredata;

service CoreData {
	rpc SendRawData (SendDataRequest) returns (SendDataReply);
}

message Message { // subscription
	string sourceId = 1;
	repeated DataInfo data = 2;
	string time = 3;
}

message SendDataRequest {
	string sourceId = 1;
	repeated DataInfo data = 2;
	string time = 3;
}

message SendDataReply {
	bool status = 1;
}

message DataInfo {
	string tagName = 1;
	oneof value {
		string text = 2;
		double number = 3;
	} 
}
  
